[gd_scene load_steps=6 format=3 uid="uid://bgaqm1qsbr30w"]

[ext_resource type="Texture2D" uid="uid://dlapxgbjce2wo" path="res://asset/control/putih.png" id="1_bt3xy"]
[ext_resource type="Script" path="res://Areas/Desa/Environment/toko_peralatan/toko_peralatan_ui_slot_jual.gd" id="1_mfcb7"]
[ext_resource type="PackedScene" uid="uid://bjxhj32neycau" path="res://Character/Player/player.tscn" id="2_plfhb"]
[ext_resource type="Texture2D" uid="uid://cf5f0ehgffuw1" path="res://Character/Bengkel/Bengkel_senyum.png" id="4_kxr7o"]
[ext_resource type="PackedScene" uid="uid://dtqsxvlwgcuxc" path="res://Areas/Desa/Environment/toko_peralatan/slot_beli.tscn" id="4_rgega"]

[node name="toko_peralatan_ui_slot_jual" type="Panel"]
script = ExtResource("1_mfcb7")

[node name="Player" parent="." instance=ExtResource("2_plfhb")]
visible = false
position = Vector2(-140, 32)

[node name="Node2D" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Node2D"]
modulate = Color(0.254902, 0.0980392, 0, 1)
position = Vector2(320.306, 180.031)
scale = Vector2(0.529295, 0.52932)
texture = ExtResource("1_bt3xy")

[node name="Paman-Copy" type="Sprite2D" parent="Node2D"]
position = Vector2(147, 134)
scale = Vector2(0.480242, 0.480242)
texture = ExtResource("4_kxr7o")

[node name="Text Box" type="Sprite2D" parent="Node2D"]
modulate = Color(1, 0.494118, 0.180392, 1)
position = Vector2(140.604, 257)
scale = Vector2(0.21092, 0.182353)
texture = ExtResource("1_bt3xy")

[node name="Label" type="Label" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 195.0
offset_right = 265.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2

[node name="Putih" type="Sprite2D" parent="Node2D"]
modulate = Color(1, 0.494118, 0.180392, 1)
position = Vector2(440, 181)
scale = Vector2(0.238213, 0.529412)
texture = ExtResource("1_bt3xy")

[node name="beli_barang" type="Control" parent="."]
anchors_preset = 0
offset_left = 308.0
offset_top = 4.0
offset_right = 567.0
offset_bottom = 352.0

[node name="VBoxContainer" type="VBoxContainer" parent="beli_barang"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
offset_right = 180.0
offset_bottom = 248.0
alignment = 2

[node name="slot_beli2" parent="beli_barang/VBoxContainer" instance=ExtResource("4_rgega")]
layout_mode = 2

[node name="slot_beli3" parent="beli_barang/VBoxContainer" instance=ExtResource("4_rgega")]
layout_mode = 2

[node name="slot_beli" parent="beli_barang/VBoxContainer" instance=ExtResource("4_rgega")]
layout_mode = 2

[node name="slot_beli4" parent="beli_barang/VBoxContainer" instance=ExtResource("4_rgega")]
layout_mode = 2

[node name="kembali" type="Button" parent="beli_barang"]
layout_mode = 2
offset_left = 91.0
offset_top = 294.0
offset_right = 162.0
offset_bottom = 325.0
text = "Kembali"

[node name="tombol" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="jual" type="Button" parent="tombol"]
layout_mode = 0
offset_left = 390.0
offset_top = 197.0
offset_right = 491.0
offset_bottom = 247.0
text = "jual"

[node name="beli" type="Button" parent="tombol"]
layout_mode = 0
offset_left = 387.0
offset_top = 97.0
offset_right = 488.0
offset_bottom = 145.0
text = "beli"

[node name="jual_barang" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="jual_barang"]
layout_mode = 0
offset_left = 303.0
offset_top = 7.0
offset_right = 577.0
offset_bottom = 355.0

[node name="VBoxContainer" type="VBoxContainer" parent="jual_barang/ScrollContainer"]
layout_mode = 2

[node name="kembali" type="Button" parent="jual_barang"]
layout_mode = 0
offset_left = 399.0
offset_top = 298.0
offset_right = 470.0
offset_bottom = 329.0
text = "Kembali"

[connection signal="pressed" from="beli_barang/kembali" to="." method="_on_kembali_pressed"]
[connection signal="pressed" from="tombol/jual" to="." method="_on_jual_pressed"]
[connection signal="pressed" from="tombol/beli" to="." method="_on_beli_pressed"]
[connection signal="pressed" from="jual_barang/kembali" to="." method="_on_kembali_pressed"]
